<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
android:id="@+id/widget29"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="@drawable/black_bg"
>


    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/home_icon" 
        >
    </ImageView>    


<TextView
android:id="@+id/app_title"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textSize="20sp"
android:textStyle="normal"
android:text="@string/app_title"
android:layout_below="@id/home_icon"
android:layout_centerHorizontal="true"
>
<!-- android:textAppearance="?android:attr/textAppearanceLarge" --> 
</TextView>


<Button
android:id="@+id/map_me"
android:drawableLeft="@drawable/disc"
android:layout_width="150dip"
android:layout_height="wrap_content"
android:text="@string/map_me"
android:layout_alignParentBottom="true"
android:layout_alignParentRight="true"
android:gravity="center"
>
</Button>

<Button
android:id="@+id/loc_bookmarks"
android:drawableLeft="@drawable/seal"
android:layout_width="150dip"
android:layout_height="wrap_content"
android:text="@string/loc_bookmarks"
android:layout_toLeftOf="@id/map_me"
android:layout_alignParentBottom="true"
android:layout_alignParentLeft="true"
android:gravity="center"
>
</Button>

<Button
android:id="@+id/search_nearby"
android:drawableLeft="@drawable/globe"
android:layout_width="150dip"
android:layout_height="wrap_content"
android:text="@string/search_nearby"
android:layout_alignParentRight="true"
android:layout_above="@id/loc_bookmarks"
android:gravity="center"
>
</Button>

<Button
android:id="@+id/my_reminders"
android:drawableLeft="@drawable/smallbulb"
android:layout_width="150dip"
android:layout_height="wrap_content"
android:text="@string/my_reminders"
android:layout_alignParentLeft="true"
android:layout_toLeftOf="@id/search_nearby"
android:layout_above="@id/map_me"
android:gravity="center"
>
</Button>



<!--
<TableLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:layout_alignParentBottom="true"
    >

    <TableRow>
        <Button
			android:id="@+id/map_me"
			android:drawableLeft="@drawable/disc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/map_me"
			android:padding="3dip"
			/>
		<Button
			android:id="@+id/loc_bookmarks"	
			android:drawableLeft="@drawable/seal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/loc_bookmarks"
			android:gravity="right"
			android:padding="3dip"
			/>		
    </TableRow>
    
    <TableRow>
		<Button
			android:id="@+id/search_nearby"	
			android:drawableLeft="@drawable/globe"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/search_nearby"
			android:layout_above="@id/loc_bookmarks"
			android:padding="3dip"
		/>
		<Button
			android:id="@+id/my_reminders"
			android:drawableLeft="@drawable/smallbulb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/my_reminders"
			android:gravity="right"
			android:padding="3dip"
			/>	
    </TableRow>

</TableLayout>
-->

<!--
<Button
android:id="@+id/map_me"
android:drawableLeft="@drawable/disc"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/map_me"
android:layout_alignParentBottom="true"
>
</Button>

<Button
android:id="@+id/loc_bookmarks"
android:drawableLeft="@drawable/seal"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/loc_bookmarks"
android:layout_above="@id/map_me"
>
</Button>

<Button
android:id="@+id/search_nearby"
android:drawableLeft="@drawable/globe"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/search_nearby"
android:layout_above="@id/loc_bookmarks"
>
</Button>

<Button
android:id="@+id/my_reminders"
android:drawableLeft="@drawable/smallbulb"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/my_reminders"
android:layout_above="@id/search_nearby"
>
</Button>

-->

</RelativeLayout>
